--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                         </a></li>
 
                     <li class="projects1"><a href="">
-                            <div><img class="images-port"src="portfoliospare.avif" width="150px" height="100px"><p class="images-port1">Coming soon..</p><p class="images-port2">View source code on github</p></div>
+                            <div><img class="images-port"src="portfoliospare2.png" width="150px" height="100px"><p class="images-port1">Coming soon..</p><p class="images-port2">View source code on github</p></div>
                         </a></li>
 
                     <li class="projects1"><a href="#">
