--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <title>Portfolio</title>
 </head>
 
-<body>
+<body >
     <header>
         <section id="home">
             <div class="heading">
@@ -169,7 +169,7 @@
             <h1 class="headings-head">Contact Me</h1>
             <div class="Contact-sub">Please fill this form to Contact me</div>
             <div class="form">
-                <form action="noaction.php">
+                <form action="#">
                     <div class="form1">Submit Your Message</div>
                     <div class="formgroup">
                         <input type="text" name="name" placeholder="Enter your Name">
@@ -183,6 +183,7 @@
         </div>
     </section>
     <hr>
+    
 </body>
 <footer>Copyrights reserved</footer>
 
