--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@
                             <div><img class="images-port"src="portfoliospare2.png" width="150px" height="100px"><p class="images-port1">Coming soon..</p><p class="images-port2">View source code on github</p></div>
                         </a></li>
 
-                    <li class="projects1"><a href="#">
-                            <div ><img class="images-port"src="portfoliospare.avif" width="150px" height="100px"><p class="images-port1">Coming soon..</p><p class="images-port2">View source code on github</p></div>
+                    <li class="projects1"><a href="https://github.com/Dhruv-Sikarwar/Portfolio.git">
+                            <div ><img class="images-port"src="portfoliospare3.jpeg" width="150px" height="100px"><p class="images-port1">This PortFolio</p><p class="images-port2">View source code on github</p></div>
                         </a></li>
 
                     <li class="projects1"><a href="#">
