--- a/index.html
+++ b/index.html
@@ -169,13 +169,13 @@
             <h1 class="headings-head">Contact Me</h1>
             <div class="Contact-sub">Please fill this form to Contact me</div>
             <div class="form">
-                <form action="#">
+                <form action="https://www.linkedin.com/messaging/thread/2-Y2MyNDk5ZGQtOTc4My00ZmY1LTk0MzMtMjQxNjMyZDA4OTc1XzEwMA==/">
                     <div class="form1">Submit Your Message</div>
                     <div class="formgroup">
                         <input type="text" name="name" placeholder="Enter your Name">
                     </div>
                     <div class="formgroup"><input type="text" name="Email" placeholder="Email Address "></div>
-                    <div class="formgroup"><input type="text" name="contact" placeholder="Mobile No."></div>
+                    <div class="formgroup"><input type="tel" name="TextBox" placeholder="Write Your Message here"></div>
                     <div class="formgroup"><input type="submit" name="submit" placeholder="Submit">
                     </div>
                 </form>
