--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
             <h1 class="headings-head">Contact Me</h1>
             <div class="Contact-sub">Please fill this form to Contact me</div>
             <div class="form">
-                <form action="https://www.linkedin.com/messaging/thread/2-Y2MyNDk5ZGQtOTc4My00ZmY1LTk0MzMtMjQxNjMyZDA4OTc1XzEwMA==/">
+                <form action="#">
                     <div class="form1">Submit Your Message</div>
                     <div class="formgroup">
                         <input type="text" name="name" placeholder="Enter your Name">
