--- a/index.html
+++ b/index.html
@@ -27,23 +27,17 @@
                 <div class="right">
                     <li class="headright"><a href="index.html#home">Home</a></li>
                     <li class="headright"><a href="index.html#about">About</a></li>
-                    <li class="headright"><a href="index.html#Portfolio">PortFolio</a></li>
+                    <li class="headright"><a href="index.html#Portfolio">Projects</a></li>
                     <li class="headright"><a href="index.html#Experience">Experience</a></li>
                     <li class="headright"><a href="index.html#Contact">Contact</a></li>
                 </div>
             </div>
     </header>
     <div class="container">
-        <div class="homeimage"><img src="Home.gif" height="400px" width="400px"></div>
+        <div class="homeimage"><img src="Home.gif" ></div>
         <div class="home">
             <h2>Welcome to my feed!</h2>
-            <div class="home1">I’m an aspiring AI and Machine Learning developer with a strong foundation in C, C++,
-                and Data Structures.
-                I'm currently learning Python to transition into Machine Learning and Data Science, where I aim to
-                apply AI to real-world problems using data.
-
-                My next steps include learning NumPy, Pandas, scikit-learn, and building beginner-friendly ML
-                projects like prediction models and classification tools
+            <div class="home1">I am a dedicated Data Analyst with a strong programming background in C,C++ and data structures complemented by proficiency in Python for advanced data analysis and machine learning applications.<br>Skilled in using Python libraries such as NumPy,Pandas and scikit-learn.I transform complex datasets into actionable insights that drive business decisions.My experience extends to building prediction models,classification tools and comprehensive data reports.<br>Additionally, I leverage my knowledge of HTML and CSS to design intuitive,responsive dashboards and visualization interfaces that enhance data storytelling and stakeholder communication.<br>Committed to continuous learning, I consistently seek to refine my analytical techniques and apply AI-driven approaches to solve real-world challenges effectively.
             </div>
             <div class="home2">
                 <li>Available on:</li>
@@ -72,19 +66,12 @@
     <section id="about">
         <div class="about">
             <h1 class="headings-head">About</h1>
-            <div class="about1">Hi, I'm Dhruv — an aspiring developer with a strong foundation in programming and web
-                development.
-                I’ve worked with C, C++, DSA, and STL, and have hands-on experience in HTML, CSS, JavaScript, and
-                currently
-                learning Python. I'm passionate about building real-world projects, improving problem-solving skills,
-                and
-                exploring the field of Artificial Intelligence. I'm committed to continuous learning and excited to grow
-                in
-                the tech industry.</div>
+            <div class="about1">Hi, I'm Dhruv — A dedicated and self-driven data analyst with a solid foundation in programming including C++,Data Structures & Algorithms (DSA) and Python.Alongside my programming expertise I am skilled in data cleaning,transformation,visualization and reporting using tools like Excel, SQL, Power BI and Tableau.</div>
             <div>
                 <h3 class="about-sub">Education:</h3>
                 <div class="education">
-                    Schooling from Emmanuel Mission Higher Sec. School(2008-2022),B.Tech in Computer Science from
+                    Schooling from Emmanuel Mission Higher Sec. School(2008-2022)<br>
+                    B.Tech in Computer Science from
                     R.G.P.V University(2022-2026)
                 </div>
 
@@ -92,15 +79,33 @@
             <div>
                 <h3 class="about-sub">Skills and Expertise:</h3>
                 <div class="skills">
-                    Skills: C,CPP,DSA,STL,Python,HTML,CSS,JavaScript<br>Expertise in Programming, DSA, Web Development,
-                    Python Expert
-                </div>
+  <h3>Skills</h3>
+  <ul>
+    <li><strong>Data Analysis & Visualization:</strong> Python (NumPy,Pandas,Matplotlib),Excel,SQL(basic).</li>
+    <li><strong>Programming:</strong> Python,C,C++.</li>
+    <li><strong>Data Structures & Algorithms:</strong> Strong foundation in DSA & STL for efficient data handling.</li>
+    <li><strong>Web Technologies:</strong> HTML,CSS,JavaScript(for building dashboards and reports).</li>
+    <li><strong>Tools:</strong> Jupyter Notebook,Git,VS Code.</li>
+  </ul>
+
+  <h3>Expertise In:</h3>
+  <ul>
+    <li>Cleaning,transforming and analyzing datasets to generate actionable insights.</li>
+    <li>Building predictive and classification models using Python libraries.</li>
+    <li>Designing interactive dashboards and reports with web technologies.</li>
+    <li>Applying programming and algorithmic skills to solve complex data problems.</li>
+    <li>Effective communication of data findings to stakeholders through visualizations.</li>
+  </ul>
+</div>
+
             </div>
             <div>
                 <h3 class="about-sub">Certificates:</h3>
                 <div class="certificates">
                     <li Class="certificates1"><a
                             href="https://premium.mysirg.com/learn/certificate/9451976-181057">C/CPP/DSA/STL</a> </li>
+                    <li Class="certificates1"><a
+                            href="https://premium.mysirg.com/learn/certificate/9451976-173476">Python</a> </li>
                     <li Class="certificates1"><a
                             href="https://cit2.internshipstudio.com/certificates/internship_certificate_new.php?internship_id=11&user_id=1120791">Web-Development</a>
                     </li>
@@ -124,6 +129,15 @@
             <div class="portfolio-sub">Featured-Project</div>
             <div class="projects">
 
+                <li class="projects1"><a href="https://github.com/Dhruv-Sikarwar/HR-Analytics-Dashboard.git">
+                        <div><img class="images-port" src="HR.png" width="150px" height="100px">
+                            <p class="images-port1">HR-Analytics Dashboard</p>
+                            <p class="images-port2">View source code on github</p>
+                        </div>
+                    </a></li>
+                <li class="projects1"><a href="https://github.com/Dhruv-Sikarwar/Python-Project.git">
+                            <div ><img class="images-port"src="Python.png" width="150px" height="100px"><p class="images-port1">Smart-Calculator</p><p class="images-port2">View source code on github</p></div>
+                        </a></li>
                 <li class="projects1"><a href="https://github.com/Dhruv-Sikarwar/Dhruv_Project.git">
                         <div><img class="images-port" src="Screenshot (22).png" width="150px" height="100px">
                             <p class="images-port1">Restaurant -Website</p>
@@ -131,7 +145,7 @@
                         </div>
                     </a></li>
 
-                <li class="projects1"><a href="">
+                <li class="projects1"><a href="#">
                         <div><img class="images-port" src="portfoliospare2.png" width="150px" height="100px">
                             <p class="images-port1">Coming soon..</p>
                             <p class="images-port2">View source code on github</p>
@@ -143,24 +157,7 @@
                             <p class="images-port1">This PortFolio</p>
                             <p class="images-port2">View source code on github</p>
                         </div>
-                    </a></li>
-
-                <li class="projects1"><a href="#">
-                        <div><img class="images-port" src="portfoliospare.avif" width="150px" height="100px">
-                            <p class="images-port1">Coming soon..</p>
-                            <p class="images-port2">View source code on github</p>
-                        </div>
-                    </a></li>
-
-
-<<<<<<< HEAD
-=======
-                    <li class="projects1"><a href="https://github.com/Dhruv-Sikarwar/Python-Project.git">
-                            <div ><img class="images-port"src="Python.png" width="150px" height="100px"><p class="images-port1">Smart-Calculator</p><p class="images-port2">View source code on github</p></div>
-                        </a></li>
-                
-                        
->>>>>>> 3c546c33926bcbf283b99af81d6c2b189af7952d
+                    </a></li>                        
             </div>
         </div>
     </section>
@@ -171,14 +168,14 @@
             <h1 class="headings-head">Experience</h1>
             <div class="experience-sub">I have more than 1 year of Experience in these Technologies.</div>
             <div class="images-exp1">
+                <img src="Python.png" width="150px" height="150px">
+                <img src="Excel.png" width="150px" height="150px">
+                <img src="sql.jpg" width="150px" height="150px">
                 <img src="C.png" width="150px" height="150px">
                 <img src="cpp-.png" width="150px" height="150px">
                 <img src="DSA.webp" width="160px" height="160px">
-                <img src="Python.png" width="150px" height="150px">
-            </div>
-            <div class="images-exp2"><img src="Html logo.png" width="150px" height="170px">
+                <img src="Html logo.png" width="150px" height="170px">
                 <img src="Css.svg" width="150px" height="150px">
-                <img src="Javascript.webp" width="150px" height="150px">
             </div>
         </div>
         </div>
