--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
     <hr>
     <section id="Portfolio">
         <div class="portfolio">
-            <h1 class="headings-head">Portfolio</h1>
+            <h1 class="headings-head">Projects</h1>
             <div class="portfolio-sub">Featured-Project</div>
             <div class="projects">
 
