--- a/index.html
+++ b/index.html
@@ -135,6 +135,12 @@
                             <p class="images-port2">View source code on github</p>
                         </div>
                     </a></li>
+                <li class="projects1"><a href="https://github.com/Dhruv-Sikarwar/Product-Pricing-Profitability-Dashboard.git">
+                        <div><img class="images-port" src="ProfitDashboard.png" width="150px" height="100px">
+                            <p class="images-port1">Product Pricing & Profitability Dashboard</p>
+                            <p class="images-port2">View source code on github</p>
+                        </div>
+                    </a></li>
                 <li class="projects1"><a href="https://github.com/Dhruv-Sikarwar/Python-Project.git">
                             <div ><img class="images-port"src="Python.png" width="150px" height="100px"><p class="images-port1">Smart-Calculator</p><p class="images-port2">View source code on github</p></div>
                         </a></li>
